cmake_minimum_required(VERSION 3.5)
project(kilo)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
include_directories(${SDL2_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIR})
set(BIN "${PROJECT_NAME}")
add_executable(${BIN} kilo.cpp)
target_link_libraries(${BIN} ${SDL2_LIBRARY} ${SDL2_TTF_LIBRARY})
set_property(TARGET ${BIN} PROPERTY CXX_STANDARD 14)
